--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
   <!-- headings -->
   <h1>About Me</h1>
   <p>
-    This is dummy text that will be replaced with links to actual blog posts.
+    This is dummy text that will be replaced with links to actual blog posts. Hopefully I can start linking to my posts soon.
   </p>
   <script src="script.js"></script>
 </body>
