--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!-- NAVIGATION BAR CODE -->
 <div class="header">
   <header> 
-    <table style="background-image: url('https://assets/images/banner.png')"> 
+    <table style="background-image: url('/assets/images/banner.png')"> 
       <tr>
         <td><p style="color: black"><b>Sean's Website</b></p></td>
         <td><button class="table-button" onclick = "window.location.href='index.html';">Home</button></td>
