--- a/blog.html
+++ b/blog.html
@@ -25,10 +25,8 @@
     <br>
   </p>
   <!-- headings -->
-  <h1>About Me</h1>
-  <p>
-    This is dummy text that will be replaced with links to actual blog posts. Hopefully I can start linking to my posts soon.
-  </p>
+  <h1><a href="/posts/my-first-post.html">My First Post!</a></h1>
+  
   <script src="script.js"></script>
 </body>
 
