--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <br>
   </p>
   <!-- headings -->
-  <h1><a href="/posts/my-first-post.html">My First Post!</a></h1>
+  <h1 class="link"   style="color:blue"><a href="/posts/my-first-post.html">My First Post!</a></h1>
   
   <script src="script.js"></script>
 </body>
