--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <br>
   </p>
   <!-- headings -->
-  <h1 class="link" style="color:yellow"><a href="/posts/my-first-post.html">My First Post!</a></h1>
+  <p class="link" style="color:yellow"><a href="/posts/my-first-post.html">My First Post!</a></p>
   
   <script src="script.js"></script>
 </body>
