--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
     <br>
   
   <!-- headings -->
-  <p class="link" style="color:yellow"><a href="/posts/my-first-post.html">My First Post!</a></p>
+  <h1><a class="link" style="color:yellow" href="/posts/my-first-post.html">My First Post!</a></h1>
   
   <script src="script.js"></script>
 </body>
