--- a/about.html
+++ b/about.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Sean's Website</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script>
-      // loads header
-      function loadHeader() {
-        fetch('nav.html')
-          .then(response => response.text())
-          .then(data => {
-            document.getElementById('replace_with_navbar').outerHTML = data;
-          });
-      }
-      document.addEventListener('DOMContentLoaded', loadHeader);
-    </script>
+
   </head>
   <body>
     <div id="replace_with_navbar"></div>
@@ -33,16 +23,16 @@
   <ul>
     <li>GNU Emacs</li>
     <li>My Amateur Cooking Adventures</li>
-    <li>COBOL (like <a class="link"   style="color:yellow" href="https://github.com/otterkit/otterkit">The Otterkit Project</a> or other programming and computing topics</li>
+    <li>COBOL &#40;like <a href="https://github.com/otterkit/otterkit">The Otterkit Project</a>&#41; or other programming and computing topics</li>
     <li>Gaming</li>
     <li>Physics</li>
   </ul>
 
   <p>
-  If you're interested, please download my <a class="link" style="color:yellow" href="assets/sean_vo_resume.pdf">resume</a> here.
+  If you're interested, please download my <a href="assets/sean_vo_resume.pdf">resume</a> here.
   </p>
     
   <script src="script.js"></script>
-<footer><a href="#index.html">&#8593;</a>&emsp;&emsp;<a class="name" href="credit.html">Credits</a></footer>
+<footer><a class="other-link" href="#index.html">&#8593;</a>&emsp;&emsp;<a class="other-link" href="credit.html">Credits</a></footer>
 </body>
 </html>
