--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,7 @@
   <header> 
     <table style="background-image: url('/assets/images/banner.png')"> 
       <tr>
-        <td><p style="color: black"><b>Sean's Website</b></p></td>
+        <td><p style="color: black"><b>&nbsp;&nbsp;&nbsp;Sean's Website</b></p></td>
         <td><button class="table-button" onclick = "window.location.href='/index.html';">Home</button></td>
         <td><button class="table-button" onclick = "window.location.href='/about.html';">About</button></td>
         <td><button class="table-button" onclick = "window.location.href='/blog.html';">Blog</button></td>
