--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <p>
     I'm an Applied Physics major and hobbyist programmer coming out of the United States. Stay and explore a while!
   </p>
+  <p>
+    Disclaimer: The navigation bar for this website currently breaks if there is an adblocker active. If something is wrong, please try to turn off any ad blockers. No adds, I promise!
+  </p>
   <script src="script.js"></script>
 
 
