--- a/rss.html
+++ b/rss.html
@@ -24,9 +24,9 @@
 <br><br><br><br><br>
     <br>
   <!-- headings -->
-  <h1>About Me</h1>
+  <h1>RSS</h1>
   <p>
-No clue what this does
+In the works!
   </p>
   <script src="script.js"></script>
   <footer><a href="#index.html">&#8593;</a>&emsp;&emsp;<a class="name" href="credit.html">Credits</a></footer>
